@@ -23,6 +23,7 @@ exportClasses(
               "mer",
               "pedigree",
               "ranef.lmer",
+              "summary.glmer",
               "summary.lmer",
               "summary.mer"
               )
